# Domain-Adaptive-Progressive-Distillation

./: .gitignore  COLAB_GUIDE.md  DAPD_Colab.ipynb  DAPD_TopConference_Review.docx  Experiment_fullpipeline.md  Makefile  README.md  Research_plan.md  experiment.md  pyproject.toml
.hf_cache/kroshan___bio_asq/default/0.0.0/d6b0152cab800446548aa0f9fcec972560cd903c/: cache-f06946637f70aa33.arrow  cache-f9c7c8721cfa06ba.arrow  dataset_info.json
configs/: dapd_example.yaml  dapd_full.yaml  dapd_m4_16gb.yaml  dapd_mps_fast.yaml  dapd_mps_safe.yaml  experiment_groups.yaml
scripts/: run_ablation.py  run_analysis.py  run_baselines.py  run_full_experiment.py  run_multi_seed.py  run_multiseed_experiment.py  run_pipeline.py  smoke_test.py
src/dapd/: __init__.py  adaptation.py  analysis.py  config.py  data.py  distillation.py  evaluation.py  pipeline.py  pruning.py  utils.py
src/dapd/analysis/: __init__.py  baseline_comparison.py  distillation_intervention.py  flops.py  pruning_patterns.py  teacher_calibration.py  teacher_distribution.py  teacher_information.py  temperature_analysis.py
src/dapd/metrics/: __init__.py  core.py
tests/: test_analysis_routing.py  test_cli_entrypoint.py  test_config_paths.py  test_data_caching.py  test_data_ood.py  test_distillation_logic.py  test_dynamics_callback.py  test_evaluation_efficiency.py  test_metrics_perplexity.py  test_pipeline_ablation.py  test_pruning_modes.py  test_pruning_structured.py  test_runtime_safety.py  test_training_args_compat.py
